--- a/thank-you.html
+++ b/thank-you.html
@@ -316,7 +316,7 @@
         </div>
 
         <div class="action-buttons">
-            <a href="../index.html" class="btn btn-primary">
+            <a href="index.html" class="btn btn-primary">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
                 </svg>
